syntax = "proto3";

option go_package = "./url_service_proto";

service ShortenerUrl {
  rpc CreateShortenUrl(CreateShortenUrlRequest) returns (CreateShortenUrlResponse);
  rpc GetShortenUrl(GetShortenUrlRequest) returns (GetShortenUrlResponse);
}

message CreateShortenUrlRequest {
  string url = 1;
  string username = 2;
  string password = 3;
}

message CreateShortenUrlResponse {
  string shorten_url = 1;
}

message GetShortenUrlRequest {
  string shorten_url = 1;
}

message GetShortenUrlResponse {
  string url = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns(LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}